# E-reader

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DESIGN.md  FEATURES.md  README.md  RELEASE.md  package-lock.json  package.json  test_translation.py
.claude/: README.md  settings.json  settings.local.example.json
.claude/commands/: feature.md  fix.md
.claude/hooks/: package-lock.json  package.json  project-context.txt  refine_prompt.mjs
.claude/rules/: 00-engineering-principles.md  10-tauri-react-workflow.md  20-codebase-conventions.md
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/plans/: 2026-01-23-mcp-reader-implementation.md
mcp_schemas/: reader-tools.schema.json
scripts/: release.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs
src-tauri/src/commands/: annotation.rs  config.rs  embedding.rs  import.rs  index.rs  mcp.rs  mod.rs  search.rs  translate.rs  tts.rs
src-tauri/src/database/: annotations.rs  cache.rs  documents.rs  embeddings.rs  mod.rs  paragraphs.rs  schema.rs  sections.rs
src-tauri/src/llm/: factory.rs  lmstudio.rs  mod.rs  openai.rs  provider.rs
src-tauri/src/mcp/: mod.rs  server.rs  tools.rs
src-tauri/src/models/: annotation.rs  document.rs  mod.rs  paragraph.rs  section.rs
src-tauri/src/parsers/: epub.rs  markdown.rs  mod.rs  pdf.rs
src-tauri/src/search/: mod.rs
src/components/: AnnotationPanel.tsx  AudiobookPanel.tsx  BilingualView.tsx  ChatPanel.tsx  DeepAnalysisPanel.tsx  DictPanel.tsx  (+14 more)
(+8 files in other folders)
