[package]
name = "reader"
version = "0.3.1"
edition = "2021"

[lib]
name = "reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
epub = "2.1"
pdf = "0.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
regex = "1.10"
dirs = "5.0"
async-trait = "0.1"
